Fixed the issue where only one comment is visible

--- a/static/css/instructor_remarks.css
+++ b/static/css/instructor_remarks.css
@@ -29,7 +29,7 @@ tr {
     font-family: 'Merriweather Sans';
 }
 
-#student-comment-paragraph {
+.student-comment-paragraph {
     font-size: 0.85em;
     width: 30vw;
     height: 15vw;
